[package]
name = "kolto"
version = "0.1.0"
description = "A KotOR 1 and 2 Save Editor!"
authors = ["Alex Nørgaard <umbra@abstractumbra.dev>"]
license = "GPLv3"
repository = "https://github.com/AbstractUmbra/Kolto"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
binrw = "0.11.2"
bstr = "1.10.0"
eframe = "0.22.0"
phf = { version = "0.11.2", features = ["macros"] }
rfd = { version = "0.11.4", features = ["common-controls-v6"] }
tempfile = "3.12.0"
eos = { git = "https://github.com/Rapptz/eos" }
thiserror = "1.0.63"
bitvec = "1.0.1"
# eos = { git = "https://github.com/Rapptz/eos", features = ["serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.50.0"
