[package]
name = "kolto"
version = "0.1.0"
description = "A KotOR 1 and 2 Save Editor!"
authors = ["Alex Nørgaard <umbra@abstractumbra.dev>"]
license = "GPLv3"
repository = "https://github.com/AbstractUmbra/Kolto"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
binrw = "0.15.1"
bstr = "1.12.1"
eframe = "0.34.1"
phf = { version = "0.13.1", features = ["macros"] }
rfd = { version = "0.17.2", features = ["common-controls-v6"] }
tempfile = "3.27.0"
eos = { git = "https://github.com/Rapptz/eos" }
thiserror = "2.0.18"
bitvec = "1.0.1"
# eos = { git = "https://github.com/Rapptz/eos", features = ["serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.56.0"
